--- a/style/style.css
+++ b/style/style.css
@@ -2,29 +2,42 @@
 	margin: 0;
 	padding: 0;
 }
+
 body {
 	font-family: arial;
+	overflow-y: none;
+	background-color: #333;
 }
-
-.container {width: 100%}
 
 .main {
 	width: 100%;
-	border:1px solid #333;
-	margin: 70px 0;
+	margin:50px auto;
+	display: flex;
+	flex-direction: column;
+	align-items: center;
 }
 
-.cards .card {
+.card {
 	display: flex;
-	height: 350px;
+	width: 80%;
+	padding: 20px;
+	box-sizing: border-box;
+	margin-bottom: 50px;
 }
-.card .teks{
-	background-color: skyblue;
-	order: 1;
-	width: 300px;
+
+.card .teks {
+	width: 50%;
+	margin:5% 50px;
+	color: white;
 }
+
 .card .img {
-	width: 300px;
-	background-color: #aeaeae;
-	order: 2;
+	width: 30%;
+	height: 395px;
+	background: white;
+}
+
+.bagian2 {
+	flex-flow: row-reverse;
+	text-align: right;
 }
