--- a/style/max-width.css
+++ b/style/max-width.css
@@ -1,22 +1,21 @@
+@media screen and (max-width: 870px){
+	.card {flex-wrap: wrap;width: 100%;padding: 5px;}
+	.card .teks {text-align: justify;width: 100%;}
+
+	.card .teks h1 {margin: 20px auto;}
+	.card .teks p {text-indent: 50px;}
+
+	.card .img {width: 100%;}
+
+}
+
 @media screen and (max-width: 670px){
-	.card {
-		flex-wrap: wrap;
-		width: 100%;
-		padding: 5px;
-	}
-	.card .teks {
-		text-align: center;
-		width: 100%;
-	}
+	.card {flex-wrap: wrap;width: 100%;padding: 5px;}
+	.card .teks {text-align: justify;width: 100%;}
 
-	.card .teks h1 {
-		margin-bottom: 10px;
-		margin: 0 auto;
-		
-	}
+	.card .teks h1 {margin: 20px auto;}
+	.card .teks p {text-indent: 50px;}
 
-	.card .img {
-		width: 100%;
-	}
+	.card .img {width: 100%;}
 
 }
