--- a/style/style.css
+++ b/style/style.css
@@ -1,4 +1,6 @@
-/*tinngal ubah warna dari teks nya aja kak di bagian teks */
+/*tinggal ubah warna dari teks nya aja kak di bagian teks */
+/*saran untuk font, semisal kurang sreg bisa cari-cari di google font lalu import */
+
 *{margin: 0;padding: 0;}
 @font-face {
 	font-family:'Homestead-Display' ;
