--- a/style/max-width.css
+++ b/style/max-width.css
@@ -1,4 +1,4 @@
-@media screen and (max-width: 870px){
+@media screen and (max-width: 1000px){
 	.card {flex-wrap: wrap;width: 100%;padding: 5px;}
 	.card .teks {text-align: justify;width: 100%;}
 
@@ -18,4 +18,20 @@
 
 	.card .img {width: 100%;}
 
+	.box {
+		/*margin: 0;*/
+        margin-left: 0;
+        width: 100%;
+        height: 100px;
+        border: 8px #ffffff solid;
+        box-shadow: none;
+    }
+    .lesson-icon p{
+    	font-size: 30px;
+    	letter-spacing: 3px;
+    	margin-top: 30px;
+    }
+    .header-right {
+    	display: none;
+    }
 }
