--- a/style/max-width.css
+++ b/style/max-width.css
@@ -31,7 +31,7 @@
     	letter-spacing: 3px;
     	margin-top: 30px;
     }
-    .header-right {
+/*    .header-right {
     	display: none;
-    }
+    }*/
 }
