--- a/style/style.css
+++ b/style/style.css
@@ -2,19 +2,19 @@
 /*saran untuk font, semisal kurang sreg bisa cari-cari di (google font) lalu import */
 *{margin: 0;padding: 0;box-sizing: border-box;}
 @font-face {
-	font-family:'Homestead-Display' ;
-	src: url("../font/Homestead-Display.ttf");
+  font-family:'Homestead-Display' ;
+  src: url("../font/Homestead-Display.ttf");
 }
 @font-face{
-	font-family: 'BLANCH_CAPS';
-	src:url("../font/BLANCH_CAPS.otf");
+  font-family: 'BLANCH_CAPS';
+  src:url("../font/BLANCH_CAPS.otf");
 }
 /* overflow y sengaja saya nonaktifkan agar tidak bisa scrol ke kanan, jika ingin di hilangkan juga gpp */
 
 body {
-	font-family: arial;
-	overflow-y: none;
-	background-color: #200001;
+  font-family: arial;
+  overflow-y: none;
+  background-color: #200001;
 }
 
 header {
@@ -95,39 +95,39 @@ header {
 /*main*/
 .main {
   transition: .3s;
-	width: 100%;
-	margin:80px auto;
-	display: flex;
-	flex-direction: column;
-	align-items: center;
+  width: 100%;
+  margin:80px auto;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
 }
 /*bagiain pembungkun dari img dan teks */
 .card {
-	display: flex;
-	width: 80%;
-	padding: 20px;
-	box-sizing: border-box;
-	margin-bottom: 50px;
-	position: relative;
+  display: flex;
+  width: 80%;
+  padding: 20px;
+  box-sizing: border-box;
+  margin-bottom: 50px;
+  position: relative;
 }
 .bagian2 {flex-flow: row-reverse;text-align: right;}
 .bagian3 {margin-bottom: 100px;}
 
 /*bagian teks*/
 .card .teks {
-	width: 50%;
-	margin:0 30px;
-	color: #eee;
-	align-self: flex-end;
-	padding-bottom: 15px;
+  width: 50%;
+  margin:0 30px;
+  color: #eee;
+  align-self: flex-end;
+  padding-bottom: 15px;
 }
 
 /*Teks header */
 .card .teks h1 {
-	margin-bottom: 10px;
-	font-family: 'Homestead-Display';
-	letter-spacing: 3px;
-	font-size: 35px;
+  margin-bottom: 10px;
+  font-family: 'Homestead-Display';
+  letter-spacing: 3px;
+  font-size: 35px;
 }
 
 /*teks deskripsi*/
@@ -141,11 +141,11 @@ header {
 /*bagian gambar/img */
 /*gambarnya di kasih radius sedikit kalo enggak sreg bisa hapus aja */
 .card .img {
-	width: 30%;
-	height: 395px;
-	background-size: cover;
-	background-position: center;
-	border-radius: 10px;
+  width: 30%;
+  height: 395px;
+  background-size: cover;
+  background-position: center;
+  border-radius: 10px;
   transition: .3s;
 }
 .card .img:hover {filter:grayscale(1);cursor: pointer;}
@@ -184,8 +184,8 @@ header {
   border: 10px #ffffff solid;
   padding: 5px;
   background-color: orange;
-  box-shadow: 28px 15px rgb(170, 92, 2);
-  margin-top:-70px; 
+  box-shadow: 8px 8px rgb(170, 92, 2);
+  margin-top:-70px;
 }
 
 .lesson-icon p{
@@ -196,63 +196,42 @@ header {
 }
 
 .color-bottom{
-  padding: 100px 100px;
+  padding: 10px 10px;
   margin-top: -100px;
   background-color: orange;
 }
 
-
 /*/*footer*/
 footer {
-  background-color: rgb(170, 92, 2);
+  background-color: rgb(190,92,2);
   color: #fff;
   height: 120px;
-  padding: 40px;
+  padding: 40px 0;
   font-family: "Homestead-Display";
 }
-
 footer p1 {
-  color: #b3aeb5;
+  color: white;
   font-size: 24px;
-  float: left;
 }
-
-footer p2 {
-  color: #b3aeb5;
-  font-size: 24px;
-  float: right;
-}
-
-footer ul {
-  text-align: center;
+footer a {
   display: inline-block;
 }
+.right-foot{
+  float:right;
+}
 
-footer ul li {
+footer a {
+  font-size: 24px;
+  font-family: 'BLANCH_CAPS';
+  color: white;
+  text-decoration: none;
   list-style: none;
   padding: 3px 15px;
   float: left;
-  
 }
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
+footer a:hover {
+  background-color: rgba(255, 255, 255, 0.3);
+}
+.left-foot{
+  margin-left: 10px;
+}
